# ndarray-matops

./: Cargo.toml  run_benches.sh  run_tests.sh
blas_tests/: Cargo.toml
blas_tests/benches/: ger.rs
blas_tests/tests/: ger.rs
src/: blas_utils.rs  ger.rs  lib.rs  utils.rs
