[package]
name = "blas_tests"
version = "0.1.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

[features]
default = []
blas = ["ndarray-matops/blas", "blas-src", "openblas-src"]

[dependencies]
approx = "0.3"
ndarray = { version = "*", features = ["approx"] }
ndarray-matops = { path = "../" }

[dependencies.blas-src]
version = "0.2"
optional = true
default-features = false
features = ["openblas"]

[dependencies.openblas-src]
version = "0.6"
optional = true
default-features = false
features = ["cblas", "system"]
