[package]
name = "blas_tests"
version = "0.1.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

[features]
default = []
blas = ["ndarray-matops/blas", "blas-src", "openblas-src"]
bench_huge = []

[dependencies]
approx = "0.3"
criterion = "0.3.3"
ndarray = { version = "*", features = ["approx"] }
ndarray-matops = { path = "../", features = ["sprs"]}
rand = "0.7.3"
rand_distr = "0.3.0"
rand_isaac = "0.2.0"
sprs = { version = "*", features = ["approx"] }

[dependencies.blas-src]
version = "0.2"
optional = true
default-features = false
features = ["openblas"]

[dependencies.openblas-src]
version = "0.6"
optional = true
default-features = false
features = ["cblas", "system"]

[[bench]]
name = "ger"
harness = false
